{
    "name": "Test_Input_Actions",
    "maps": [
        {
            "name": "Test",
            "id": "bcdcf540-cd90-4753-9306-7dbfbc0c0fa0",
            "actions": [
                {
                    "name": "Test_01",
                    "type": "Button",
                    "id": "4f13854a-0cd2-4580-81a2-36452733e706",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test_02",
                    "type": "Button",
                    "id": "259143f7-f1a1-41f9-bc97-5427faac0325",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test_03",
                    "type": "Button",
                    "id": "c531ca68-5d42-422f-83ea-23bce68ade6f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test_04",
                    "type": "Button",
                    "id": "382cf189-d918-41ae-85c4-dad85cdf36d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test_05",
                    "type": "Button",
                    "id": "a3c5fa99-86b1-4c33-919e-2c877c57ef05",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "L_Click",
                    "type": "Button",
                    "id": "bfdf3144-558a-4617-97ed-e1bc63b69974",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "R_Click",
                    "type": "Button",
                    "id": "e8814f77-1dd9-422a-a134-b8d3a339f20f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Enter",
                    "type": "Button",
                    "id": "4ffff3ce-cf1f-475f-a78f-eb08e6b7b1cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mouse_Move",
                    "type": "Value",
                    "id": "679a2878-8b73-418a-a814-805b081f89e5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Mouse_Wheel",
                    "type": "Value",
                    "id": "ebaca1fb-a4f0-41f6-9839-ba98e1448a40",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "152929a5-ef9c-4d17-bd31-e3185e5dba8d",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test_01",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60968b0e-16f0-41b1-9247-499ce6db2edd",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test_02",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d08de25a-40b3-4c04-88c9-bea75bb13d0e",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test_03",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0ce8808-eb82-470f-8e9a-4b7730f1dbf2",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test_04",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b86102f-da11-4524-9a6c-ea26cf092ccc",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test_05",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "18f525be-e03f-4a8b-a9e2-0f19cce509c2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "L_Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "051dfdd4-f377-4157-a612-f36fd9653b1d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "R_Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8878783-8101-4795-95b5-263f28c12369",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse_Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "d5ef0e08-93b6-4f58-9cf6-8e54da17bdf2",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse_Wheel",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "2247157b-f6d7-4d6b-a39c-7c7020b6b733",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse_Wheel",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "61a587e5-b6e7-41e5-b0a8-fc37d1cd7db4",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse_Wheel",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f1243faa-7d72-4a0a-ba22-044b02cdf161",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Enter",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}